
#PROJECT(techlibs)

ADD_SUBDIRECTORY(common)

SET(ANLOGIC_TECHLIB_SOURCES     anlogic/anlogic_fixcarry.cc anlogic/synth_anlogic.cc anlogic/anlogic_eqn.cc)
SET(ACHRONIX_TECHLIB_SOURCES    achronix/synth_achronix.cc)
SET(COMMON_TECHLIB_SOURCES      common/prep.cc common/synth.cc)
SET(COMMON_TECHLIB_SOURCES_ORG  ${TL_COMMON_GEN_FILELIST})
SET(COOLRUNNER2_TECHLIB_SOURCES coolrunner2/coolrunner2_fixup.cc coolrunner2/coolrunner2_sop.cc coolrunner2/synth_coolrunner2.cc)
SET(EASIC_TECHLIB_SOURCES       easic/synth_easic.cc)
SET(ECP5_TECHLIB_SOURCES        ecp5/ecp5_gsr.cc ecp5/synth_ecp5.cc)
SET(EFINIX_TECHLIB_SOURCES      efinix/efinix_fixcarry.cc efinix/synth_efinix.cc)
SET(GOWIN_TECHLIB_SOURCES       gowin/synth_gowin.cc)
SET(GREENPAK4_TECHLIB_SOURCES   greenpak4/synth_greenpak4.cc greenpak4/greenpak4_dffinv.cc)
SET(ICE40_TECHLIB_SOURCES       ice40/ice40_opt.cc ice40/synth_ice40.cc ice40/ice40_braminit.cc)
SET(INTEL_TECHLIB_SOURCES       intel/synth_intel.cc)
SET(INTEL_ALM_TECHLIB_SOURCES   intel_alm/synth_intel_alm.cc)
SET(SF2_TECHLIB_SOURCES         sf2/synth_sf2.cc)
SET(XILINX_TECHLIB_SOURCES      xilinx/xilinx_dffopt.cc xilinx/synth_xilinx.cc)

SET(TECHLIBS_SRC )
SET(ENABLED_TECHLIBS )

MACRO(ADD_YOSYS_TECHLIBS Name Enabled)
    OPTION(ENABLE_${Name}_TECHLIB "Enable ${Name} frontend." ${Enabled})
    IF (ENABLE_${Name}_TECHLIB)
        LIST(APPEND TECHLIBS_SRC ${${Name}_TECHLIB_SOURCES_ORG})
        FOREACH(SRC ${${Name}_TECHLIB_SOURCES})
            LIST(APPEND TECHLIBS_SRC ${CMAKE_CURRENT_LIST_DIR}/${SRC})
        ENDFOREACH()
        LIST(APPEND ENABLED_TECHLIBS ${Name})
    ENDIF()
ENDMACRO()

ADD_YOSYS_TECHLIBS(ANLOGIC     OFF)
ADD_YOSYS_TECHLIBS(ACHRONIX    OFF)
ADD_YOSYS_TECHLIBS(COMMON      ON)
ADD_YOSYS_TECHLIBS(COOLRUNNER2 OFF)
ADD_YOSYS_TECHLIBS(EASIC       OFF)
ADD_YOSYS_TECHLIBS(ECP5        OFF)
ADD_YOSYS_TECHLIBS(EFINIX      OFF)
ADD_YOSYS_TECHLIBS(GOWIN       OFF)
ADD_YOSYS_TECHLIBS(GREENPAK4   OFF)
ADD_YOSYS_TECHLIBS(ICE40       OFF)
ADD_YOSYS_TECHLIBS(INTEL       OFF)
ADD_YOSYS_TECHLIBS(INTEL_ALM   OFF)
ADD_YOSYS_TECHLIBS(SF2         OFF)
ADD_YOSYS_TECHLIBS(XILINX      OFF)

MESSAGE("<< Enabled techlibs: ${ENABLED_TECHLIBS} >>")
#ADD_LIBRARY(${PROJECT_NAME} ${TECHLIBS_SRC})
SET(TECHLIBS_SRC ${TECHLIBS_SRC} PARENT_SCOPE)

MACRO(ConfigSource WORKING_DIRECTORY)
    CONFIG_TECHLIB_COMMON_SIMHELP(${WORKING_DIRECTORY}/common)
ENDMACRO()
