add_subdirectory(achronix)
add_subdirectory(analogdevices)
add_subdirectory(anlogic)
add_subdirectory(common)
add_subdirectory(coolrunner2)
add_subdirectory(easic)
add_subdirectory(efinix)
add_subdirectory(fabulous)
add_subdirectory(gatemate)
add_subdirectory(gowin)
add_subdirectory(greenpak4)
add_subdirectory(ice40)
add_subdirectory(intel)
add_subdirectory(intel_alm)
add_subdirectory(lattice)
add_subdirectory(microchip)
add_subdirectory(nanoxplore)
add_subdirectory(quicklogic)
add_subdirectory(sf2)
add_subdirectory(xilinx)
